[package]
name = "strafesnet_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.25.0"
id = { git = "https://git.itzana.me/Quaternions/id", rev = "faca9fb6a8eb0c7f0e2796fbfad9eac16875cbd6" }
